<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sprint_selection"
    android:background="@drawable/project_main">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/sprint_select"
        android:textColor="#000000"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="@font/font_type1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.194" />


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="126dp"
            android:contentDescription="TODO"
            android:src="@drawable/pm2"
            tools:ignore="ContentDescription,HardcodedText" />

        <Button

            android:id="@+id/sprint1"
            android:layout_width="130dp"
            android:layout_height="75dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_shape"
            android:text="@string/sprint1"
            android:textColor="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="400dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="126dp"
            android:src="@drawable/pm3"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/sprint2"
            android:layout_width="130dp"
            android:layout_height="75dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/btn_shape"
            android:text="@string/sprint2"
            android:textColor="@color/white"

            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="400dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.913"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="126dp"
            android:src="@drawable/pm4"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <Button
            android:id="@+id/sprint3"
            android:layout_width="130dp"
            android:layout_height="75dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_shape"
            android:text="@string/sprint3"
            android:textColor="@color/white"

            />


    </LinearLayout>

    <TextView
        android:layout_width="123dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/name"
        android:textColor="@color/lavender"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>
